--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-week-planner",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "MIT",
   "description": "A React week events planner component",
   "author": "Franck Mamboue",
@@ -37,7 +37,9 @@
   "scripts": {
     "start": "tsc -w",
     "dev": "react-scripts start",
-    "prepack": "tsc --noEmit false"
+    "prepack": "rm -rf dist && npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly --noEmit false",
+    "build:js": "NODE_ENV=production babel src/lib --out-dir dist --source-maps inline"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +63,8 @@
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/date-fns": "^2.6.0",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
