--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-week-planner",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "license": "MIT",
   "description": "A React week events planner component",
   "author": "Franck Mamboue",
@@ -39,7 +39,7 @@
     "dev": "react-scripts start",
     "prepack": "rm -rf dist && yarn build:types && yarn build:js",
     "build:types": "tsc --emitDeclarationOnly --noEmit false",
-    "build:js": "NODE_ENV=production babel src/lib --out-dir dist --extensions \".ts,.tsx\" --source-maps inline"
+    "build:js": "NODE_ENV=production babel src/lib --out-dir dist --copy-files"
   },
   "eslintConfig": {
     "extends": [
