--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "prepack": "rm -rf dist && yarn build:esm && yarn build:cjs && yarn build:types",
     "build:esm": "babel src/lib --extensions .ts,.tsx -d dist/esm --source-maps",
     "build:cjs": "babel src/lib --extensions .ts,.tsx -d dist/cjs --source-maps",
-    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types"
+    "build:types": "tsc --noEmit false --emitDeclarationOnly --declaration --declarationDir dist/types"
   },
   "eslintConfig": {
     "extends": [
