--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-week-planner",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "license": "MIT",
   "description": "A React week events planner component",
   "author": "Franck Mamboue",
@@ -35,8 +35,6 @@
     "focus-visible": "^5.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.6",
@@ -75,9 +73,13 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/date-fns": "^2.6.0",
-    "@types/node": "^16.3.3",
+    "@types/node": "^16.4.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
