--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   ],
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
-    "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "date-fns": "^2.22.1",
     "formik": "^2.2.9",
@@ -66,6 +65,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@emotion/react": "^11.4.0"
   }
 }
