--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-week-planner",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "license": "MIT",
   "description": "A React week events planner component",
   "author": "Franck Mamboue",
@@ -64,8 +64,8 @@
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.4.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@emotion/react": "^11.4.0"
+    "react-dom": "^17.0.2"
   }
 }
