--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,7 @@
     ]
   },
   "scripts": {
-    "dev": "react-scripts start"
+    "dev": "PORT=3001 react-scripts start"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
